--- a/pages/personal.html
+++ b/pages/personal.html
@@ -36,6 +36,12 @@
     <div class="grid-press" id="gridComfort"></div>
   </section>
 
+  <section class="exercise">
+    <h2>Comfort & Position</h2>
+    <div class="grid-press" id="gridExercise"></div>
+  </section>
+
+  
   <script>
     window.addEventListener('DOMContentLoaded', ()=>{
       __attachBack('#back','../index.html');
