--- a/pages/personal.html
+++ b/pages/personal.html
@@ -37,7 +37,7 @@
   </section>
 
   <section class="exercise">
-    <h2>Comfort & Position</h2>
+    <h2>Exercise</h2>
     <div class="grid-press" id="gridExercise"></div>
   </section>
 
