Fix HTML structure and update section class

--- a/pages/personal.html
+++ b/pages/personal.html
@@ -1,4 +1,4 @@
-<!doctype html>
+tion<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -36,7 +36,7 @@
     <div class="grid-press" id="gridComfort"></div>
   </section>
 
-  <section class="exercise">
+  <section class="section">
     <h2>Exercise</h2>
     <div class="grid-press" id="gridExercise"></div>
   </section>
@@ -48,6 +48,8 @@
       __renderPressGrid(document.getElementById('gridHygiene'), PERSONAL_PRESS.hygiene);
       __renderPressGrid(document.getElementById('gridClothing'), PERSONAL_PRESS.clothing);
       __renderPressGrid(document.getElementById('gridComfort'), PERSONAL_PRESS.comfort);
+      __renderPressGrid(document.getElementById('gridExercise'), PERSONAL_PRESS.exercise);
+      
     });
   </script>
 </body>
